--- a/index.html
+++ b/index.html
@@ -8,30 +8,28 @@
 		<title>HTML & CSS PISCINE | ABOUT</title>
 		<meta name="description" content="42 HTML & CSS Piscine Homepage">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="css/style_desktop.css">
+		<link rel="stylesheet" href="css/layout.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	</head>
 
   <body>
     <div class="layout">
-      <nav class="layout__left">
-
+      <nav class="layout__nav">
+        nav
       </nav>
 
-      <div class="layout__right">
-        <header class="layout-header">
+      <header class="layout__header">
+        header
+      </header>
 
-        </header>
+      <main class="layout__content">
+        main
+      </main>
 
-        <main class="layout-content">
-
-        </main>
-
-        <footer class="layout-footer">
-
-        </footer>
-      </div>
+      <footer class="layout__footer">
+        footer
+      </footer>
     </div>
 	</body>
 </html>
