--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-		<meta charset="utf-8">
-		<meta name="author" content="bokim, yongjule, ghan">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link href="assets/chick_icon.png" rel="short icon" type="image/png">
-		<title>HTML & CSS PISCINE | ABOUT</title>
-		<meta name="description" content="42 HTML & CSS Piscine Homepage">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="css/layout.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	</head>
+    <meta charset="utf-8" />
+    <meta name="author" content="bokim, yongjule, ghan" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="assets/chick_icon.png" rel="short icon" type="image/png" />
+    <title>HTML & CSS PISCINE | ABOUT</title>
+    <meta name="description" content="42 HTML & CSS Piscine Homepage" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+  </head>
 
   <body>
     <div class="layout">
-      <nav class="layout__nav">
-        nav
-      </nav>
+      <nav class="layout__nav">nav</nav>
 
       <header class="layout__header">
-        header
+        <a href="index.html">
+          <div class="header__content">
+            <h2 class="header-content__title">HTML & CSS Piscine</h2>
+            <img class="header-content__img" src="assets/header_chick.jpg" />
+          </div>
+        </a>
       </header>
 
-      <main class="layout__content">
-        main
-      </main>
+      <main class="layout__content">main</main>
 
-      <footer class="layout__footer">
-        footer
-      </footer>
+      <footer class="layout__footer">footer</footer>
     </div>
-	</body>
+  </body>
 </html>
