feature/footer : added text

--- a/index.html
+++ b/index.html
@@ -1,35 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-		<meta charset="utf-8">
-		<meta name="author" content="bokim, yongjule, ghan">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link href="assets/chick_icon.png" rel="short icon" type="image/png">
-		<title>HTML & CSS PISCINE | ABOUT</title>
-		<meta name="description" content="42 HTML & CSS Piscine Homepage">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="css/layout.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	</head>
+    <meta charset="utf-8" />
+    <meta name="author" content="bokim, yongjule, ghan" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="assets/chick_icon.png" rel="short icon" type="image/png" />
+    <title>HTML & CSS PISCINE | ABOUT</title>
+    <meta name="description" content="42 HTML & CSS Piscine Homepage" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+  </head>
 
   <body>
     <div class="layout">
-      <nav class="layout__nav">
-        nav
-      </nav>
+      <nav class="layout__nav">nav</nav>
 
-      <header class="layout__header">
-        header
-      </header>
+      <header class="layout__header">header</header>
 
-      <main class="layout__content">
-        main
-      </main>
+      <main class="layout__content">main</main>
 
       <footer class="layout__footer">
-        footer
+        <p class="layout__footer--text">
+          credit to
+          <a
+            class="underline"
+            href="https://github.com/bokyungkim"
+            target="”_blank”"
+            >@bokim</a
+          >,
+          <a
+            class="underline"
+            href="https://github.com/yongjulejule"
+            target="”_blank”"
+            >@yongjule</a
+          >,
+          <a
+            class="underline"
+            href="https://github.com/42ghan"
+            target="”_blank”"
+            >@ghan</a
+          >
+          from
+          <a
+            class="underline"
+            href="https://42seoul.kr/seoul42/contents/view?contentsNo=13&level=2&menuNo=28&gclid=CjwKCAjwq9mLBhB2EiwAuYdMtdmRx10PMU1_Yp3UV03erQ_PL44gR5zW3EUlOom3opX1RkW-DJaeSBoCRS8QAvD_BwE"
+            target="”_blank”"
+            >42 Seoul</a
+          >
+        </p>
       </footer>
     </div>
-	</body>
+  </body>
 </html>
