--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-		<meta charset="utf-8">
-		<meta name="author" content="bokim, yongjule, ghan">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link href="assets/chick_icon.png" rel="short icon" type="image/png">
-		<title>HTML & CSS PISCINE | ABOUT</title>
-		<meta name="description" content="42 HTML & CSS Piscine Homepage">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="css/layout.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	</head>
+    <meta charset="utf-8" />
+    <meta name="author" content="bokim, yongjule, ghan" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="assets/chick_icon.png" rel="short icon" type="image/png" />
+    <title>HTML & CSS PISCINE | ABOUT</title>
+    <meta name="description" content="42 HTML & CSS Piscine Homepage" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/nav.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+  </head>
 
   <body>
     <div class="layout">
       <nav class="layout__nav">
-        nav
+        <a href="#"
+          ><img src="assets/42_logo_nav.svg" class="layout__nav--logo"
+        /></a>
       </nav>
 
-      <header class="layout__header">
-        header
-      </header>
+      <header class="layout__header">header</header>
 
-      <main class="layout__content">
-        main
-      </main>
+      <main class="layout__content">main</main>
 
-      <footer class="layout__footer">
-        footer
-      </footer>
+      <footer class="layout__footer">footer</footer>
     </div>
-	</body>
+  </body>
 </html>
