--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
         <a href="#"
           ><img src="assets/42_logo_nav.svg" class="layout__nav--logo"
         /></a>
+        <ul class="layout__nav--items">
+          <li class="layout__nav__items--icon">
+            <a href="about.html"
+              ><i class="material-icons md-nav-icon">home</i></a
+            >
+          </li>
+          <li class="layout__nav__items--icon">
+            <a href="subject.html"
+              ><i class="material-icons md-nav-icon">hub</i></a
+            >
+          </li>
+          <li class="layout__nav__items--icon">
+            <a href="norm.html"
+              ><i class="material-icons md-nav-icon">explore</i></a
+            >
+          </li>
+        </ul>
       </nav>
 
       <header class="layout__header">
