--- a/index.html
+++ b/index.html
@@ -30,19 +30,13 @@
         /></a>
         <ul class="layout__nav--items">
           <li class="layout__nav__items--icon">
-            <a href="about.html"
-              ><i class="material-icons md-nav-icon">home</i></a
-            >
+            <a href="#"><i class="material-icons md-nav-icon">home</i></a>
           </li>
           <li class="layout__nav__items--icon">
-            <a href="subject.html"
-              ><i class="material-icons md-nav-icon">hub</i></a
-            >
+            <a href="#"><i class="material-icons md-nav-icon">hub</i></a>
           </li>
           <li class="layout__nav__items--icon">
-            <a href="norm.html"
-              ><i class="material-icons md-nav-icon">explore</i></a
-            >
+            <a href="#"><i class="material-icons md-nav-icon">explore</i></a>
           </li>
         </ul>
       </nav>
