--- a/pages/day04.html
+++ b/pages/day04.html
@@ -5,10 +5,10 @@
     <meta name="author" content="bokim, yongjule, ghan" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="assets/chick_icon.png" rel="short icon" type="image/png" />
-    <title>HTML & CSS PISCINE | ABOUT</title>
-    <meta name="description" content="42 HTML & CSS Piscine Homepage" />
+    <title>HTML & CSS PISCINE | DAY04</title>
+    <meta name="description" content="42 HTML & CSS Piscine Day04 Subject" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/home_desktop.css" />
+    <link rel="stylesheet" href="../css/project_desktop.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
@@ -22,8 +22,8 @@
   <body>
     <div class="layout">
       <nav class="layout__nav">
-        <a href="#"
-          ><img src="assets/42_logo_nav.svg" class="layout__nav--logo"
+        <a href="../index.html"
+          ><img src="../assets/42_logo_nav.svg" class="layout__nav--logo"
         /></a>
         <ul class="layout__nav--items">
           <li class="layout__nav__items--icon">
@@ -38,11 +38,13 @@
         </ul>
       </nav>
 
+      <div class="layout__subnav"></div>
+
       <header class="layout__header">
-        <a href="index.html">
+        <a href="../index.html">
           <div class="header__content">
             <h2 class="header-content__title">HTML & CSS Piscine</h2>
-            <img class="header-content__img" src="assets/header_chick.jpg" />
+            <img class="header-content__img" src="../assets/header_chick.jpg" />
           </div>
         </a>
       </header>
