--- a/index.html
+++ b/index.html
@@ -30,10 +30,39 @@
             <a href="#"><i class="material-icons md-nav-icon">home</i></a>
           </li>
           <li class="layout__nav__items--icon">
-            <a href="#"><i class="material-icons md-nav-icon">hub</i></a>
+            <label for="subnav" class="nav__subnav--label">
+              <i class="material-icons-outlined md-nav-icon hub-icon">hub</i>
+            </label>
+            <input type="checkbox" id="subnav" />
+            <ul id="subnav--toggle">
+              <li class="subnav--toggle__title text-bold"><h3>PROJECTS</h3></li>
+              <li class="subnav--toggle__subject">
+                <a href="pages/day00.html">DAY00</a>
+              </li>
+              <li class="subnav--toggle__subject">
+                <a href="pages/day01.html">DAY01</a>
+              </li>
+              <li class="subnav--toggle__subject">
+                <a href="pages/day02.html">DAY02</a>
+              </li>
+              <li class="subnav--toggle__subject">
+                <a href="pages/day03.html">DAY03</a>
+              </li>
+              <li class="subnav--toggle__subject">
+                <a href="pages/day04.html">DAY04</a>
+              </li>
+              <li class="subnav--toggle__subject">
+                <a href="pages/day05.html">DAY05</a>
+              </li>
+              <li class="subnav--toggle__subject">
+                <a href="pages/rush.html">RUSH</a>
+              </li>
+            </ul>
           </li>
           <li class="layout__nav__items--icon">
-            <a href="#"><i class="material-icons md-nav-icon">explore</i></a>
+            <a href="#"
+              ><i class="material-icons-outlined md-nav-icon">explore</i></a
+            >
           </li>
         </ul>
       </nav>
