feature/nav : fit to bem

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
           ><img src="assets/42_logo_nav.svg" class="layout__nav--logo"
         /></a>
         <ul class="layout__nav--items">
-          <li class="layout__nav__items--icon">
+          <li class="nav__items--icon">
             <a href="#"><i class="material-icons md-nav-icon">home</i></a>
           </li>
-          <li class="layout__nav__items--icon">
+          <li class="nav__items--icon">
             <label for="subnav" class="nav__subnav--label">
-              <i class="material-icons-outlined md-nav-icon hub-icon">hub</i>
+              <span
+                ><i class="material-icons-outlined md-nav-icon hub-icon"
+                  >hub</i
+                ></span
+              >
             </label>
             <input type="checkbox" id="subnav" />
             <ul id="subnav--toggle">
@@ -59,7 +63,7 @@
               </li>
             </ul>
           </li>
-          <li class="layout__nav__items--icon">
+          <li class="nav__items--icon">
             <a href="#"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
