--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
   <body>
     <div class="layout">
       <nav class="layout__nav">
-        <a href="#"
+        <a href="index.html"
           ><img src="assets/42_logo_nav.svg" class="layout__nav--logo"
         /></a>
         <ul class="layout__nav--items">
           <li class="nav__items--icon">
-            <a href="#"><i class="material-icons md-nav-icon">home</i></a>
+            <a href="index.html"
+              ><i class="material-icons md-nav-icon">home</i></a
+            >
           </li>
           <li class="nav__items--icon">
             <label for="subnav" class="nav__subnav--label">
-              <span
-                ><i class="material-icons-outlined md-nav-icon hub-icon"
-                  >hub</i
-                ></span
-              >
+              <i class="material-icons-outlined md-nav-icon hub-icon">hub</i>
             </label>
             <input type="checkbox" id="subnav" />
             <ul id="subnav--toggle">
