--- a/pages/day02.html
+++ b/pages/day02.html
@@ -26,19 +26,46 @@
           ><img src="../assets/42_logo_nav.svg" class="layout__nav--logo"
         /></a>
         <ul class="layout__nav--items">
-          <li class="layout__nav__items--icon">
-            <a href="#"><i class="material-icons md-nav-icon">home</i></a>
+          <li class="nav__items--icon">
+            <a href="../index.html"
+              ><i class="material-icons md-nav-icon">home</i></a
+            >
           </li>
-          <li class="layout__nav__items--icon">
+          <li class="nav__items--icon">
             <a href="#"><i class="material-icons md-nav-icon">hub</i></a>
           </li>
-          <li class="layout__nav__items--icon">
+          <li class="nav__items--icon">
             <a href="#"><i class="material-icons md-nav-icon">explore</i></a>
           </li>
         </ul>
       </nav>
 
-      <div class="layout__subnav"></div>
+      <div class="layout__subnav">
+        <ul class="subnav__fixed">
+          <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
+          <li class="fixed--subject">
+            <a href="day00.html">DAY00</a>
+          </li>
+          <li class="fixed--subject">
+            <a href="day01.html">DAY01</a>
+          </li>
+          <li class="fixed--subject">
+            <a href="day02.html">DAY02</a>
+          </li>
+          <li class="fixed--subject">
+            <a href="day03.html">DAY03</a>
+          </li>
+          <li class="fixed--subject">
+            <a href="day04.html">DAY04</a>
+          </li>
+          <li class="fixed--subject">
+            <a href="day05.html">DAY05</a>
+          </li>
+          <li class="fixed--subject">
+            <a href="rush.html">RUSH</a>
+          </li>
+        </ul>
+      </div>
 
       <header class="layout__header">
         <a href="../index.html">
