feature/nav_on_page : add framebox on each page

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <ul class="layout__nav--items">
           <li class="nav__items--icon">
             <a href="index.html"
-              ><i class="material-icons md-nav-icon">home</i></a
+              ><i class="material-icons md-nav-hovered">home</i></a
             >
           </li>
           <li class="nav__items--icon">
             <label for="subnav" class="nav__subnav--label">
-              <i class="material-icons-outlined md-nav-icon hub-icon">hub</i>
+              <i class="material-icons-outlined md-nav-icon">hub</i>
             </label>
             <input type="checkbox" id="subnav" />
             <ul id="subnav--toggle">
@@ -78,7 +78,9 @@
         </a>
       </header>
 
-      <main class="layout__content">main</main>
+      <main class="layout__content">
+        <div class="content__frame"></div>
+      </main>
 
       <footer class="layout__footer">
         <p class="layout__footer--text small">
