--- a/pages/day05.html
+++ b/pages/day05.html
@@ -32,10 +32,14 @@
             >
           </li>
           <li class="nav__items--icon">
-            <a href="#"><i class="material-icons md-nav-icon">hub</i></a>
+            <a href="#"
+              ><i class="material-icons-outlined md-nav-hovered">hub</i></a
+            >
           </li>
           <li class="nav__items--icon">
-            <a href="#"><i class="material-icons md-nav-icon">explore</i></a>
+            <a href="#"
+              ><i class="material-icons-outlined md-nav-icon">explore</i></a
+            >
           </li>
         </ul>
       </nav>
@@ -76,7 +80,9 @@
         </a>
       </header>
 
-      <main class="layout__content">main</main>
+      <main class="layout__content">
+        <div class="content__frame"></div>
+      </main>
 
       <footer class="layout__footer">
         <p class="layout__footer--text small">
