feature/home_content : about page content filled

--- a/index.html
+++ b/index.html
@@ -79,7 +79,56 @@
       </header>
 
       <main class="layout__content">
-        <div class="content__frame"></div>
+        <div class="content__frame">
+          <h2 class="content__head xxxlarge text-bold">About</h2>
+          <img
+            class="content__logo"
+            alt="html_css_logo"
+            src="assets/html_css_logo.png"
+          />
+          <h3 class="content__welcome xlarge text-bold">
+            42 HTML & CSS Piscine 에 오신 여러분을 환영합니다 🐣
+          </h3>
+          <p class="content__para large">
+            HTML & CSS Piscine은 7일 동안 동료들과 함께 토이 프로젝트들을
+            수행하며 웹페이지의 뼈대를 이루는 HTML & CSS 기술을 익히는
+            프로젝트입니다.
+          </p>
+          <p class="content__para large">
+            여러분은 아래의 기법들을 직접 사용해보며 다양한 디자인의
+            웹페이지들을 구현할 것 입니다.
+          </p>
+          <ul class="content__list large">
+            <li>HTML tags & semantics</li>
+            <li>CSS syntax</li>
+            <li>CSS Layout (block, flexbox, grid, etc.)</li>
+            <li>CSS decoration</li>
+            <li>CSS animation</li>
+            <li>Responsive web design</li>
+          </ul>
+          <p class="content__para large">
+            Piscine 에서 살아남을 수 있는 방법은 단 하나 뿐이죠. 모르는게
+            있으신가요? 양 옆에 있는 동료에게 물어보세요. 양 옆에 있는 동료도
+            모른다면 세명이 함께 다른 동료를 찾아가 질문하세요. Google 이
+            여러분과 함께합니다.
+          </p>
+          <p class="content__para large">
+            HTML & CSS 피신에서는 clean coding을 위해 최소한의
+            <a
+              class="text-underline text-bold"
+              href="pages/guideline.html"
+              target="_blank"
+              >지침</a
+            >을 제공합니다. 과제 수행 시 지침을 꼭 지켜주세요.
+          </p>
+          <p class="content__para large">
+            자 그럼 떨리는 마음으로 다 같이 외쳐볼까요?
+          </p>
+          <p class="content__para large">
+            "병아리가 닭이 되는 그날까지! 초보가 초고수가 되는 그날까지! Chick
+            to Chicken~ 🐣 <a href="https://www.kfckorea.com/">🐓</a>"
+          </p>
+        </div>
       </main>
 
       <footer class="layout__footer">
