feature/guideline : link guideline.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </ul>
           </li>
           <li class="nav__items--icon">
-            <a href="#"
+            <a href="pages/guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
           </li>
