--- a/pages/day05.html
+++ b/pages/day05.html
@@ -37,7 +37,7 @@
             >
           </li>
           <li class="nav__items--icon">
-            <a href="#"
+            <a href="guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
           </li>
