feature/day00 : day00 subject filled

--- a/pages/day02.html
+++ b/pages/day02.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="bokim, yongjule, ghan" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link href="assets/chick_icon.png" rel="short icon" type="image/png" />
+    <link href="../assets/chick_icon.png" rel="short icon" type="image/png" />
     <title>HTML & CSS PISCINE | DAY02</title>
     <meta name="description" content="42 HTML & CSS Piscine Day02 Subject" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
