feature/nav : modify subnav size and hovering it

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -47,7 +47,7 @@
       <div class="layout__subnav">
         <ul class="subnav__fixed">
           <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
-          <li class="fixed--subject">
+          <li class="fixed--subject fixed--subject--active">
             <a href="day00.html">DAY00</a>
           </li>
           <li class="fixed--subject">
