--- a/pages/day02.html
+++ b/pages/day02.html
@@ -53,7 +53,7 @@
           <li class="fixed--subject">
             <a href="day01.html">DAY01</a>
           </li>
-          <li class="fixed--subject">
+          <li class="fixed--subject fixed--subject--active">
             <a href="day02.html">DAY02</a>
           </li>
           <li class="fixed--subject">
