--- a/pages/day03.html
+++ b/pages/day03.html
@@ -56,7 +56,7 @@
           <li class="fixed--subject">
             <a href="day02.html">DAY02</a>
           </li>
-          <li class="fixed--subject">
+          <li class="fixed--subject fixed--subject--active">
             <a href="day03.html">DAY03</a>
           </li>
           <li class="fixed--subject">
