--- a/pages/rush.html
+++ b/pages/rush.html
@@ -65,7 +65,7 @@
           <li class="fixed--subject">
             <a href="day05.html">DAY05</a>
           </li>
-          <li class="fixed--subject">
+          <li class="fixed--subject fixed--subject--active">
             <a href="rush.html">RUSH</a>
           </li>
         </ul>
