--- a/pages/day01.html
+++ b/pages/day01.html
@@ -50,7 +50,7 @@
           <li class="fixed--subject">
             <a href="day00.html">DAY00</a>
           </li>
-          <li class="fixed--subject">
+          <li class="fixed--subject fixed--subject--active">
             <a href="day01.html">DAY01</a>
           </li>
           <li class="fixed--subject">
