--- a/pages/day04.html
+++ b/pages/day04.html
@@ -59,7 +59,7 @@
           <li class="fixed--subject">
             <a href="day03.html">DAY03</a>
           </li>
-          <li class="fixed--subject">
+          <li class="fixed--subject fixed--subject--active">
             <a href="day04.html">DAY04</a>
           </li>
           <li class="fixed--subject">
