--- a/pages/day05.html
+++ b/pages/day05.html
@@ -62,7 +62,7 @@
           <li class="fixed--subject">
             <a href="day04.html">DAY04</a>
           </li>
-          <li class="fixed--subject">
+          <li class="fixed--subject fixed--subject--active">
             <a href="day05.html">DAY05</a>
           </li>
           <li class="fixed--subject">
