feature/spec_table : link header index link in guideline.html

--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -70,7 +70,7 @@
       </nav>
 
       <header class="layout__header">
-        <a href="index.html">
+        <a href="../index.html">
           <div class="header__content">
             <h2 class="header-content__title">HTML & CSS Piscine</h2>
             <img class="header-content__img" src="../assets/header_chick.jpg" />
